--- a/blogindex.html
+++ b/blogindex.html
@@ -2,7 +2,7 @@
 <head>
 <title>Blog Index</title>
 <meta charset="utf-8"/>
-<link rel='stylesheet' type='text/css' href='style.css'>
+<link rel='stylesheet' type='text/css' href='css/stylesheet.css'>
 </head>
 
 <body>
@@ -12,6 +12,8 @@
 
 <ul>
 <!-- LB -->
+<li>2020 Jul 02 &ndash; <a href="blog/this-is-what-a-post-looks-like.html">This is what a post looks like</a></li>
+
 </ul>
 
 </body>
