better HTML example

--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>Blog</title>
 <meta charset="utf-8"/>
+<title>Blog</title>
 <link rel='stylesheet' type='text/css' href='css/stylesheet.css'>
 </head>
 
 <body>
+<main>
 <h1>Blog</h1>
 
 <p>The blog content will appear below here.</p>
@@ -18,7 +21,7 @@
 <small>Wed, 15 Jul 2020 17:49:32 -0300</small>
 </div>
 
-
+</main>
 </body>
 </html>
 
