--- a/blogindex.html
+++ b/blogindex.html
@@ -1,11 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>Blog Index</title>
 <meta charset="utf-8"/>
+<title>Blog Index</title>
 <link rel='stylesheet' type='text/css' href='css/stylesheet.css'>
 </head>
 
 <body>
+<main>
+
 <h1>Blog Index</h1>
 
 <p>The blog list will appear below. If you want to add year or month headings, you are expected to do it yourself. You could just as easily have this on your manin index.html. Remember to just change the blog index variable in the <code>lb</code> script to what you index file is.</p>
@@ -16,6 +20,7 @@
 
 </ul>
 
+</main>
 </body>
 </html>
 
