--- a/blogindex.html
+++ b/blogindex.html
@@ -16,7 +16,8 @@
 
 <ul>
 <!-- LB -->
-<li>2020 Jul 15 &ndash; <a href="blog/this-is-what-a-post-looks-like.html">This is what a post looks like</a></li>
+<li>2020 Jul 16 &ndash; <a href="blog/this-is-what-having-two-posts-look-like.html">This is what having two posts look like</a></li>
+<li>2020 Jul 16 &ndash; <a href="blog/this-is-what-a-post-looks-like.html">This is what a post looks like</a></li>
 
 </ul>
 
