--- a/blogindex.html
+++ b/blogindex.html
@@ -2,26 +2,70 @@
 <html lang="en">
 
 <head>
-<meta charset="utf-8"/>
-<title>Blog Index</title>
-<link rel='stylesheet' type='text/css' href='css/stylesheet.css'>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.mod.css">
+    <title>
+        blogindex.html
+    </title>
 </head>
 
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4 sticky-top">
+    <a class="navbar-brand" href="#">blogindex.html</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown active">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Blog <span class="sr-only">(current)</span></a>
+                <div class="dropdown-menu dropdown-menu-right">
+					<a class="dropdown-item" href="blog.html">Blog Page</a>
+					<a class="dropdown-item" href="#">Blog Index</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <main>
 
-<h1>Blog Index</h1>
+<div class="container card card-body my-2">
+	<div class="text-center">
+	    <h4>Index entries are sorted by publication date.</h4>
+    </div>
+	<hr class="my-2">
 
-<p>The blog list will appear below. If you want to add year or month headings, you are expected to do it yourself. You could just as easily have this on your manin index.html. Remember to just change the blog index variable in the <code>lb</code> script to what you index file is.</p>
+	<ul class="my-3">
 
-<ul>
 <!-- LB -->
-<li>2020 Jul 16 &ndash; <a href="blog/this-is-what-having-two-posts-look-like.html">This is what having two posts look like</a></li>
-<li>2020 Jul 16 &ndash; <a href="blog/this-is-what-a-post-looks-like.html">This is what a post looks like</a></li>
+<li>2020 Oct 16 &ndash; <a href="blog/this-is-what-having-two-posts-look-like.html">This is what having two posts look like</a></li>
+<li>2020 Oct 16 &ndash; <a href="blog/this-is-what-a-post-looks-like.html">This is what a post looks like</a></li>
 
 </ul>
 
+	<hr class="mt-3 mb-4">
+    <div class="text-center" style="margin-top: 1em;">
+        <p>
+		    This blog was generated using <a href="https://github.com/rnsavinelli/blog-handler" target="_blank">blog-handler</a>.
+        </p>
+    </div>
+
+</div>
+
 </main>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </body>
 </html>
-
